@@ -2,9 +2,10 @@ package com.example.toyou.service.FriendService;
 
 import com.example.toyou.apiPayload.code.status.ErrorStatus;
 import com.example.toyou.apiPayload.exception.GeneralException;
-import com.example.toyou.app.dto.FriendRequest;
+import com.example.toyou.app.dto.FriendRequestRequest;
 import com.example.toyou.app.dto.FriendResponse;
 import com.example.toyou.converter.FriendConverter;
+import com.example.toyou.domain.FriendRequest;
 import com.example.toyou.domain.User;
 import com.example.toyou.domain.enums.FriendStatus;
 import com.example.toyou.repository.FriendRepository;
@@ -14,7 +15,10 @@ import lombok.extern.slf4j.Slf4j;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 
+import java.time.LocalDate;
 import java.util.List;
+import java.util.stream.Collectors;
+import java.util.stream.Stream;
 
 @Slf4j
 @Service
@@ -35,12 +39,16 @@ public class FriendServiceImpl implements FriendService {
                 .orElseThrow(() -> new GeneralException(ErrorStatus.USER_NOT_FOUND));
 
         // accepted가 true인 친구 요청 리스트 검색
-        List<com.example.toyou.domain.FriendRequest> friendRequests = friendRepository.findByUserAndAcceptedTrue(user);
+        List<FriendRequest> friendRequests1 = friendRepository.findByUserAndAcceptedTrue(user);
+        List<FriendRequest> friendRequests2 = friendRepository.findByFriendAndAcceptedTrue(user);
 
-        // 친구 리스트화
-        List<User> friends = friendRequests.stream()
-                .map(com.example.toyou.domain.FriendRequest::getFriend)
-                .toList();
+        // 두 리스트 합치기
+        List<User> friends = Stream.concat(
+                        friendRequests1.stream().map(FriendRequest::getFriend),
+                        friendRequests2.stream().map(FriendRequest::getUser)
+                )
+                .distinct() // 중복 제거
+                .collect(Collectors.toList());
 
         return FriendConverter.toGetFriendsDTO(friends);
     }
@@ -81,7 +89,7 @@ public class FriendServiceImpl implements FriendService {
      * 친구 요청
      */
     @Transactional
-    public void createFriendRequest(Long userId, FriendRequest.createFriendRequestDTO request) {
+    public void createFriendRequest(Long userId, FriendRequestRequest.createFriendRequestDTO request) {
         // 본인 검색
         User user = userRepository.findById(userId)
                 .orElseThrow(() -> new GeneralException(ErrorStatus.USER_NOT_FOUND));
@@ -106,7 +114,7 @@ public class FriendServiceImpl implements FriendService {
      * 친구 삭제 & 친구 요청 취소
      */
     @Transactional
-    public void deleteFriendRequest(Long userId, FriendRequest.deleteFriendRequestDTO request){
+    public void deleteFriendRequest(Long userId, FriendRequestRequest.deleteFriendRequestDTO request){
 
         // 유저 검색
         User user = userRepository.findById(userId)
@@ -130,7 +138,7 @@ public class FriendServiceImpl implements FriendService {
      * 친구 요청 승인
      */
     @Transactional
-    public void acceptFriendRequest(Long userId, FriendRequest.acceptFriendRequestDTO request){
+    public void acceptFriendRequest(Long userId, FriendRequestRequest.acceptFriendRequestDTO request){
 
         // 친구 신청 대상(본인)
         User receiver = userRepository.findById(userId)
@@ -141,11 +149,53 @@ public class FriendServiceImpl implements FriendService {
                 .orElseThrow(() -> new GeneralException(ErrorStatus.USER_NOT_FOUND));
 
         // 친구 요청 정보 확인
-        com.example.toyou.domain.FriendRequest friendRequestToAccept = friendRepository.findByUserAndFriend(requester, receiver)
+        FriendRequest friendRequestToAccept = friendRepository.findByUserAndFriend(requester, receiver)
                 .orElseThrow(() -> new GeneralException(ErrorStatus.REQUEST_INFO_NOT_FOUND));
 
         if(friendRequestToAccept.getAccepted()) throw new GeneralException(ErrorStatus.ALREADY_FRIENDS);
 
         friendRequestToAccept.setAccepted();
+    }
+
+    /**
+     * 어제 일기카드를 생성한 친구 목록 조회
+     */
+    public FriendResponse.getFriendYesterdayDTO getFriendYesterday(Long userId){
+
+        // 유저 검색
+        User user = userRepository.findById(userId)
+                .orElseThrow(() -> new GeneralException(ErrorStatus.USER_NOT_FOUND));
+
+        // 오늘 날짜 기준 어제 날짜 계산
+        LocalDate yesterday = LocalDate.now().minusDays(1);
+
+        // accepted가 true이고, 어제 생성된 DiaryCard가 있는 친구들의 닉네임 리스트
+        List<String> friendNicknames1 = friendRepository.findByUserAndAcceptedTrue(user).stream()
+                .filter(friendRequest -> {
+                    User friend = friendRequest.getFriend();
+                    return friend.getDiaryCardList().stream()
+                            .anyMatch(diaryCard -> diaryCard.getCreatedAt().toLocalDate().isEqual(yesterday));
+                })
+                .map(friendRequest -> friendRequest.getFriend().getNickname())
+                .toList();
+
+        List<String> friendNicknames2 = friendRepository.findByFriendAndAcceptedTrue(user).stream()
+                .filter(friendRequest -> {
+                    User friend = friendRequest.getUser();
+                    return friend.getDiaryCardList().stream()
+                            .anyMatch(diaryCard -> diaryCard.getCreatedAt().toLocalDate().isEqual(yesterday));
+                })
+                .map(friendRequest -> friendRequest.getUser().getNickname())
+                .toList();
+
+        // 두 리스트 합치기
+        List<String> friendNicknames = Stream.concat(
+                        friendNicknames1.stream(),
+                        friendNicknames2.stream()
+                )
+                .distinct() // 중복 제거
+                .toList();
+
+        return FriendConverter.toYesterdayDTO(friendNicknames);
     }
 }
